h1. CHANGELOG

h2. 2.1.0 August 10, 2012

* use local recipes (contributed by tomykaira)
* hidden preference for alternative bundle path (can be set in the defaults file)
* fix 'models' recipe to only install rolify when authorization is selected
* update gem 'zurb-foundation' from 3.0.5 to 3.0.8
* update gem 'rolify' from 3.1.0 to 3.2.0
* update gem 'launchy' from 2.1.0 to 2.1.2
* update gem 'factory_girl_rails' from 3.5.0 to 4.0.0
* update gem 'mongoid' from 3.0.1 to 3.0.3
* update gem 'twitter-bootstrap-rails' from 2.0.3 to 2.1.1

h2. 2.0.1 August 8, 2012

* wrote a "Guide" to provide complete documentation
* diagnostics module compares user's recipes and preferences to known working combinations
* add a prefs{} hash for conditional configuration options (the 'quiz')
* option to set 'quiz' preferences in a defaults file
* add gems at a prompt or from a defaults file for a gems[] array
* new 'copy_from_repo' method in helpers.erb
* reduce inline code with more downloading of files from the example app repos on GitHub
* conversion of ERB files to Haml or Slim with the 'copy_from_repo' method
* remove recipes that are outdated or unsupported
* reorganize recipes for easier maintenance
* new recipe: 'example' as documentation
* new recipe: 'setup' for conditional configuration options (the 'quiz')
* new recipe: 'readme' to build README files that provide greater detail
* new recipe: 'gems' collects all the gems in one recipe for easier updating
* new recipe: 'testing' combines rspec and cucumber options with fixture replacements
* new recipe: 'auth' combines devise, cancan and omniauth options
* new recipe: 'email' consolidates email account options
* new recipe: 'models' consolidates all models
* new recipe: 'controllers' consolidates all controllers
* new recipe: 'views' consolidates all views
* new recipe: 'routes' consolidates all routes
* new recipe: 'frontend' is the new name for the 'html5' recipe