@@ -5,21 +5,6 @@
 say_wizard "You are using Ruby version #{RUBY_VERSION}."
 say_wizard "You are using Rails version #{Rails::VERSION::STRING}."
 
-## Git
-say_wizard "initialize git"
-prefs[:git] = true unless prefs.has_key? :git
-if prefer :git, true
-  begin
-    remove_file '.gitignore'
-    get 'https://raw.github.com/RailsApps/rails3-application-templates/master/files/gitignore.txt', '.gitignore'
-  rescue OpenURI::HTTPError
-    say_wizard "Unable to obtain gitignore file from the repo"
-  end
-  git :init
-  git :add => '.'
-  git :commit => "-aqm 'rails_apps_composer: initial commit'"
-end
-
 ## Is sqlite3 in the Gemfile?
 gemfile = File.read(destination_root() + '/Gemfile')
 sqlite_detected = gemfile.include? 'sqlite3'
